# Numerical_Paradigms-Research

./: README.md
Academic_Writing/: README.md
Academic_Writing/Articles/OCSE-EGPF/: readme.md
Academic_Writing/report/new/: main.tex
Academic_Writing/report/new/Capitulos/: CompParadig.tex  PvisEdo.tex
Academic_Writing/report/new/Preambulo/: Comandos.tex
Latex_V/Texto/new/Capitulos/: FloatingPoints.tex  Referências.tex  ref.bib
lab/benchmarks/Functional_Vs_Imperative_Py/: README.md  requirements.txt
lab/benchmarks/Functional_Vs_Imperative_Py/da/: da.ipynb
lab/benchmarks/Functional_Vs_Imperative_Py/data/: estatisticas_resumo.csv  results.csv
lab/benchmarks/Functional_Vs_Imperative_Py/methods/: euler_func.py  euler_impe.py  mpf_func.py  mpf_impe.py  nr1d_func.py  nr1d_impe.py  nr2d_func.py  nr2d_impe.py
lab/benchmarks/Functional_Vs_Imperative_Py/runner/: run_all.py
lab/floating-point_errors/: .gitignore  requirements.txt
lab/floating-point_errors/Errors/01/: NumError1_mplt.py
lab/num_met_imp/fixed-point_method/haskell/: haskell.cabal  package.yaml  stack.yaml
lab/num_met_imp/fixed-point_method/haskell/.stack-work/: stack.sqlite3
lab/num_met_imp/fixed-point_method/haskell/a/: a.hs  graph.html
lab/num_met_imp/fixed-point_method/haskell/mpf/: mpf_hs.hi  mpf_hs.hs  mpf_hs.s  o1_mpf_hs.s  o2_mpf_hs.s  o3_mpf_hs.s
lab/num_met_imp/fixed-point_method/haskell/mpf/data_analisys/: mpf_hs.csv
lab/num_met_imp/fixed-point_method/haskell/mpf_graph/: mpf_graph.hs
lab/num_met_imp/newton-raphson_method/: README.md
(+227 files in other folders)
