cabal-version: 3.0
version: 0.1.0.0
name: haskell
synopsis: numerical-methods
description: ic
license: MIT
author: oenzoribas
maintainer: oenzoribas @ github.com

-- Adicione a seção 'executable' para o seu programa principal
executable my-program
    -- Adicione a dependência de GHC.RTS
    build-depends:
        base >= 4.7 && < 5,
        plotlyhs,
        lucid,
        microlens,
        text,
        lens

    hs-source-dirs: ./mpf/
    -- Define o arquivo que contém a função main
    main-is: mpf.hs 
    
    -- Configuração do compilador
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010